--- a/Html/Index.Html
+++ b/Html/Index.Html
@@ -118,7 +118,7 @@
           <!-- Proyecto 1 -->
           <div class="col-12 col-md-6 col-lg-4 div-Proyectos-Individual">
             <div class="proyecto">
-              <img src="../Imagenes/Proyecto.Jpg" alt="Proyecto 1">
+              <img src="../Imagenes/proyecto6.png" alt="Proyecto 1">
               <div class="overlay">
                 <p>Proyecto 1</p>
                 <div class="iconos-contenedor">
